--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     
     <footer>
         <div class="container">
-            <p class="text-muted">powered by bincent.com  沪ICP备09082347号-2</p>
+            <p class="text-muted">powered by bincent.com  沪ICP备09082347号</p>
             <p class="text-muted">Copyright 2009 - 2014 All rights reserved. </p>
         </div>
     </footer>
