--- a/index.html
+++ b/index.html
@@ -157,18 +157,17 @@
     
     <footer>
         <div class="container">
-            <p class="text-muted">powered by bincent.com  沪ICP备09082347号</p>
-            <p class="text-muted">Copyright 2009 - 2014 All rights reserved. </p>
+            <p class="text-muted pull-left">Powered by Bincent.com  沪ICP备09082347号</p>
+            <p class="text-muted pull-right">Copyright 2009 - 2014 All rights reserved. </p>
         </div>
     </footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-
 <script src="/assets/js/bootstrap.min.js"></script>
-<script src="/assets/js/jquery.toTop.min.js"></script>
+<script src="/assets/js/jquery.scrollUp.min.js?theme=pill"></script>
 <script src="/assets/js/common.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
-
-<div id="xunlei_com_thunder_helper_plugin_d462f475-c18e-46be-bd10-327458d045bd"></div><div class="backToTop" style="width: 60px; height: 60px; display: block;" title="返回顶部"><img width="60" height="60" src="/assets/img/top.png"></div></body></html>
+</body>
+</html>
